fix sitewide notice dismiss link z-index

--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -293,5 +293,6 @@ p.demo_store,
     top: 1.5rem;
     font-size: 0.9rem;
     font-weight: 500;
+    z-index: 2;
   }
 }
